# winny-itchio-template

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html
src/: lib.rs  main.rs  wasm.rs
